# Aether-Desk

./: .gitignore  COMPILATION_FIXES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  PHASE_2A_IMPLEMENTATION_SUMMARY.md  README.md  build.rs  build_and_run.bat  build_for_distribution.bat  build_installer.bat  build_windows.bat  build_windows.ps1  create_icon.ps1  installer.nsi  run.bat  test_video.bat
.github/workflows/: ci.yml
.kiro/specs/compilation-fixes/: design.md  requirements.md  tasks.md
src/: lib.rs  main.rs
src/core/: config.rs  error.rs  mod.rs  performance.rs  plugin.rs  resource_manager.rs  scheduler.rs  types.rs  widget.rs
src/experiments/: mod.rs
src/experiments/ai/: mod.rs
src/experiments/effects/: mod.rs
src/experiments/performance/: mod.rs
src/experiments/wallpapers/: mod.rs
src/experiments/widgets/: mod.rs
src/platform/: hyprland.rs  mod.rs
src/platform/linux/: mod.rs
src/platform/windows/: desktop.rs  mod.rs  window_manager.rs
src/ui/: app.rs  gallery.rs  mod.rs
src/wallpapers/: audio_wallpaper.rs  mod.rs  shader_wallpaper.rs  static_wallpaper.rs  video_wallpaper.rs  web_wallpaper.rs
tests/: integration_tests.rs
