[package]
name = "aether-desk"
version = "0.1.0"
edition = "2021"
authors = ["SreeVarshan <https://sreevarshan-portfolio-lilac.vercel.app>"]
description = "A modern, cross-platform desktop wallpaper manager with advanced features"
license = "MIT"
repository = "https://github.com/sreevarshan-xenoz/aether-desk"
readme = "README.md"
keywords = ["wallpaper", "desktop", "gui", "cross-platform"]
categories = ["gui", "multimedia"]

[dependencies]
# Core libraries
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

# UI - Updated to latest compatible versions
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24"
rfd = "0.12"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "shlobj", "combaseapi", "objbase", "oleauto", "wtypesbase"] }

# Image processing and media
image = "0.24"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"

# Build dependencies removed - not using Tauri

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Profile optimization for dependencies
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true 